fix: fix img stretch

--- a/src/pages/product-description/styles/description.scss
+++ b/src/pages/product-description/styles/description.scss
@@ -27,7 +27,9 @@
 }
 
 .main-img {
+    object-fit: contain;
     height: 380px;
+    width: 380px;
     margin-bottom: 20px;
     &:hover {
         cursor: pointer;
@@ -36,7 +38,8 @@
 
 .mini-img {
     width: 100px;
-    height: auto;
+    height: 100px;
+    object-fit: contain;
     border: 1px solid $SUB_COLOR_PAGE;
     transition: border .2s linear;
 
